<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>
    <variable
        name="viewModel"
        type="me.hackathon.monicershopsapp.ui.newbill.NewBillViewModel"
        />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/login_background"
      android:id="@+id/root"
      tools:context="me.hackathon.monicershopsapp.ui.newbill.NewBillActivity"
      >

    <TextView
        android:id="@+id/shop_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:paddingTop="32dp"
        android:text="@{viewModel.shopTitle}"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Random Shop"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_title"
        app:cardElevation="12dp"
        >
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <TextView
            android:id="@+id/new_bill_card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/new_bill"
            android:textColor="@color/colorTextPrimary"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/new_bill_card_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/new_bill_card_description"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_bill_card_title"
            />

        <EditText
            android:id="@+id/amount_input"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="88dp"
            android:singleLine="true"
            android:inputType="number"
            android:digits="0123456789."
            android:text="@={viewModel.billAmount}"
            android:background="@drawable/background_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/new_bill_amount"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/new_bill_card_title"
            />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/background_confirm_button"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_input"
            />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/background_input"
            android:text="@string/cancel"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/confirm_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/confirm_button"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/logo_text"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
