<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>
    <variable
        name="viewModel"
        type="me.hackathon.monicershopsapp.ui.newbill.NewBillViewModel"
        />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/login_background"
      android:id="@+id/root"
      tools:context="me.hackathon.monicershopsapp.ui.newbill.NewBillActivity"
      >

    <TextView
        android:id="@+id/shop_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:paddingTop="32dp"
        android:text="@{viewModel.shopTitle}"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Random Shop"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_title"
        app:cardElevation="12dp"
        >
      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/success_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="36dp"
            android:tint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_check_circle"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/summary_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/waiting"
            android:textColor="#949494"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="120dp"
            android:layout_height="42dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/background_input"
            android:text="@string/close"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            />


      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/logo_text"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
